infrastructure/base/network/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: nginx-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-12"
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: jenkinsdevops-tls
        kind: Secret    # Добавлено для Sync
        group: ""       # Добавлено для Sync
    allowedRoutes:
      namespaces:
        from: All
